Fix UI bugs on mobile view

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -203,7 +203,7 @@ input {
 				justify-content: start;
 				background-color: var(--all-tool-background);
 				border-radius: 10px;
-				max-height: calc(100vh - 80px);
+				max-height: calc(100vh - 150px);
 				overflow: hidden auto;
 
 				.tool-btn {
